--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+build/
+
+AuD.pdf
+
 ## Core latex/pdflatex auxiliary files:
 *.aux
 *.lof
@@ -107,3 +111,4 @@ sympy-plots-for-*.tex/
 
 # xindy
 *.xdy
+StochastischeSignale.pdf
